--- a/assignment_1/CMakeLists.txt
+++ b/assignment_1/CMakeLists.txt
@@ -70,7 +70,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate actions in the 'action' folder
 add_action_files(
   FILES
-  RobotController.action
+  RobotCtrl_reach.action
+  RobotCtrl_search.action
 )
 
 ## Generate added messages and services with any dependencies listed here
