--- a/assignment_1/CMakeLists.txt
+++ b/assignment_1/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   message_generation
   actionlib_msgs
+  nav_msgs
 )
 
 ## System dependencies are found with CMake's conventions
